--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.6",
+    "jquery": "^3.6.3",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
